[package]
name = "ftp-web"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/ahaoboy/ftp-web"
homepage = "https://github.com/ahaoboy/ftp-web"
authors = ["ahaoboy"]
license = "MIT"
description = "Download ftp files from browser"

[dependencies]
bytesize ="1.3.0"
suppaftp = "6"
regex = "1.5"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
fileinfo = "0.1.1"
clap = { version = "4.5.6", features = ["derive"] }
local-ip-address = { version = "0.6.1" }
find_port = "0.1.0"
fast_qr = "0.12.5"
tower-http = { version = "0.5.0", features = ["cors"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
